; ModuleID = '/home/carl/AnghaBench/linux/drivers/rpmsg/extr_rpmsg_core.c_rpmsg_unregister_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rpmsg/extr_rpmsg_core.c_rpmsg_unregister_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.rpmsg_channel_info = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpmsg_unregister_device(%struct.device* %0, %struct.rpmsg_channel_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.rpmsg_channel_info*, align 8
  %6 = alloca %struct.device*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.rpmsg_channel_info* %1, %struct.rpmsg_channel_info** %5, align 8
  %7 = load %struct.device*, %struct.device** %4, align 8
  %8 = load %struct.rpmsg_channel_info*, %struct.rpmsg_channel_info** %5, align 8
  %9 = call %struct.device* @rpmsg_find_device(%struct.device* %7, %struct.rpmsg_channel_info* %8)
  store %struct.device* %9, %struct.device** %6, align 8
  %10 = load %struct.device*, %struct.device** %6, align 8
  %11 = icmp ne %struct.device* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load %struct.device*, %struct.device** %6, align 8
  %17 = call i32 @device_unregister(%struct.device* %16)
  %18 = load %struct.device*, %struct.device** %6, align 8
  %19 = call i32 @put_device(%struct.device* %18)
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %15, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local %struct.device* @rpmsg_find_device(%struct.device*, %struct.rpmsg_channel_info*) #1

declare dso_local i32 @device_unregister(%struct.device*) #1

declare dso_local i32 @put_device(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
